--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"build": "webpack --config webpack.config.js",
-	"dev-server": "webpack-dev-server"
+    "build": "webpack --config webpack.config.js",
+    "dev-server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,14 @@
   },
   "homepage": "https://github.com/a-z-ivanov/redux-playground#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "1.5.2",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-2": "6.24.1",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
     "redux": "^4.0.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
