--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-2": "6.24.1",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
