--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "url": "https://github.com/a-z-ivanov/redux-playground/issues"
   },
   "homepage": "https://github.com/a-z-ivanov/redux-playground#readme",
-  "devDependencies": {
+  "dependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
@@ -38,7 +38,9 @@
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
+    "webpack-cli": "^3.1.2"
+  },
+  "devDependencies": {
     "webpack-dev-server": "^3.1.9"
   }
 }
