--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-2": "6.24.1",
     "express": "^4.16.4",
+    "firebase": "^5.5.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "webpack": "^4.20.2",
