login and logout redirects

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-stage-2": "6.24.1",
     "express": "^4.16.4",
     "firebase": "^5.5.4",
+    "history": "^4.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
