--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,10 @@
 {
-	"presets": ["env", "stage-2", "react"]
+	"presets": [
+		"env",
+		"react"
+	  ],
+	  "plugins": [
+		"transform-class-properties",
+		"transform-object-rest-spread"
+	  ]
 }
